tests/base/parser/bad/cmodule-version-number-with.scilla
scilla_version 0

(* Typo *)
libray Nothing

contract Test

